fix: sin propuestas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,70 +33,70 @@ const maxPosts = 3;
 const limitedPosts = allPosts.slice(0, maxPosts);
 ---
 
-<style define:vars={{ 
-    propuestaUno: `url("${propuestaUno.src}")`,
-    propuestaDos: `url(${ propuestaDos.src})`,
-    propuestaTres: `url(${ propuestaTres.src})`,
-    propuestaCuatro: `url(${propuestaCuatro.src})`,
-    propuestaCinco: `url(${propuestaCinco.src})`,
-    propuestaSeis: `url(${propuestaSeis.src})`,
-    propuestaSiete: `url(${propuestaSiete.src})`,
-    propuestaOcho: `url(${propuestaOcho.src})`,
-    }}>
-    #propuestaUno{
+<style
+    define:vars={{
+        propuestaUno: `url("${propuestaUno.src}")`,
+        propuestaDos: `url(${propuestaDos.src})`,
+        propuestaTres: `url(${propuestaTres.src})`,
+        propuestaCuatro: `url(${propuestaCuatro.src})`,
+        propuestaCinco: `url(${propuestaCinco.src})`,
+        propuestaSeis: `url(${propuestaSeis.src})`,
+        propuestaSiete: `url(${propuestaSiete.src})`,
+        propuestaOcho: `url(${propuestaOcho.src})`,
+    }}
+>
+    #propuestaUno {
         background-image: var(--propuestaUno);
         background-size: cover;
         background-position: center;
     }
-    #propuestaDos{
+    #propuestaDos {
         background-image: var(--propuestaDos);
         background-size: cover;
         background-position: center;
     }
-    #propuestaTres{
+    #propuestaTres {
         background-image: var(--propuestaTres);
         background-size: cover;
         background-position: center;
     }
-    #propuestaCuatro{
+    #propuestaCuatro {
         background-image: var(--propuestaCuatro);
         background-size: cover;
         background-position: center;
     }
-    #propuestaCinco{
+    #propuestaCinco {
         background-image: var(--propuestaCinco);
         background-size: cover;
         background-position: center;
     }
-    #propuestaSeis{
+    #propuestaSeis {
         background-image: var(--propuestaSeis);
         background-size: cover;
         background-position: center;
     }
-    #propuestaSiete{
+    #propuestaSiete {
         background-image: var(--propuestaSiete);
         background-size: cover;
         background-position: center;
     }
-    #propuestaOcho{
+    #propuestaOcho {
         background-image: var(--propuestaOcho);
         background-size: cover;
         background-position: center;
     }
 
-
-
-    #arrow{
+    #arrow {
         margin-left: 6px;
         animation: arrowRight 2s infinite ease-in-out;
         color: #ffd300;
     }
-    @keyframes arrowRight{
-        0%{
+    @keyframes arrowRight {
+        0% {
             transform: translateX(0);
         }
-        100%{
-            transform: translateX(5px)
+        100% {
+            transform: translateX(5px);
         }
     }
     .propuestasUl {
@@ -149,15 +149,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
 >
     <main>
         <section class="one">
-           
-            <video
-                class=""
-                loop
-                muted
-                autoplay
-                width="100%"
-                height="100%"
-            >
+            <video class="" loop muted autoplay width="100%" height="100%">
                 <source
                     src="https://pub-236b6a1111854253bfa86853c8c7d5ae.r2.dev/portada.mp4"
                     type="video/mp4"
@@ -165,167 +157,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
             </video>
         </section>
 
-        <section class="max-w-screen-xl mx-auto">
-            <div class="text-center my-10 mx-2">
-                <div class="flex justify-center">
-                    <p>Propuestas 2024 | Desliza</p>
-                    <p id="arrow">&rarr;</p>
-                </div>
-                <h2 class="text-4xl font-semibold">
-                    Juntos podemos <span class="text-[#ffd300]">hacer realidad</span> estas propuestas
-                </h2>
-            </div>
-            <div class="overflow-x-scroll snap-x snap-mandatory my-10">
-                <ul class="propuestasUl">
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaUno" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Justicia Hídrica.
-                            </h3>
-                            <p>
-                                Esta iniciativa contempla la sensibilización
-                                respecto al cuidado y la protección del agua,
-                                además plantea que el Estado pueda garantizar el
-                                acceso a través de protocolos, acciones y
-                                mecanismos que sean evaluables, así como
-                                sancionar su negligencia.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaDos" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Ley de protección y cuidado de los animales del
-                                hogar.
-                            </h3>
-                            <p>
-                                México es uno de los países que registra mayor
-                                maltrato animal, incluso es considerado uno de
-                                los peores lugares para las mascotas, por ello,
-                                esta propuesta tiene por objetivo otorgar
-                                protección a los animales del hogar, garantizar
-                                su bienestar, desarrollo natural y un entorno
-                                favorable, así como evitarles maltrato,
-                                sufrimiento, zoofilia y su sacrificio
-                                injustificado.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaTres" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Reconocimiento de las personas pepenadoras y sus
-                                derechos laborales.
-                            </h3>
-                            <p>
-                                Plantea otorgar reconocimiento y seguridad
-                                social a las personas que realizan actividades
-                                de recolección, acopio y reciclaje que
-                                participan dentro del proceso de manejo integral
-                                de residuo, con el objetivo de mejorar sus
-                                condiciones laborales y de calidad de vida.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaCuatro" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Derechos económicos para las juventudes,
-                                incluyendo el acceso a un empleo digno.
-                            </h3>
-                            <p>
-                                Busca establecer como obligación del Estado
-                                garantizar el primer empleo formal de las y los
-                                jóvenes mexiquenses con el objetivo de que
-                                puedan insertarse en el ámbito con todos los
-                                derechos laborales reconocidos por la Ley.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaCinco" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Ley de fomento al emprendimiento.
-                            </h3>
-                            <p>
-                                Contempla impulsar el crecimiento económico
-                                mediante el estímulo al espíritu emprendedor e
-                                iniciativa productiva de la ciudadanía,
-                                propiciando su incorporación al mercado y
-                                economía estatal, como actores fundamentales que
-                                garanticen el desarrollo social.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaSeis" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Legalización del uso y portación de armas no
-                                letales para la defensa personal.
-                            </h3>
-                            <p>
-                                Ante el aumento de la violencia e inseguridad en
-                                el Estado de México, esta propuesta permite que
-                                la población pueda usar gas pimienta y teaser
-                                como medio para defenderse ante situaciones que
-                                generen amenaza y expongan su integridad física
-                                o moral; este tipo de armas no letales,
-                                justamente no representan un peligro al
-                                emplearse, pero permite ganar tiempo para que la
-                                víctima pueda ponerse a salvo.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaSiete" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Alfabetización digital.
-                            </h3>
-                            <p>
-                                Acortar la brecha digital que existe en nuestro
-                                Estado y que todas y todos tengan la posibilidad
-                                de ejercer su derecho a la conectividad;
-                                permitirá no solo el acceso a la información
-                                sino también, ampliar las posibilidades y
-                                herramientas con las que se cuentan para
-                                desarrollar otras habilidades.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="bg-gray-100 rounded-xl snap-center">
-                        <div id="propuestaOcho" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
-                        <div class="p-4 md:p-10 space-y-4">
-                            <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Gratuidad de los estacionamientos; seguro por
-                                robo y daño total o parcial del vehículo.
-                            </h3> 
-                            <p>
-                                Los estacionamientos públicos, en su mayoría, no
-                                cuentan con una reglamentación estandarizada y
-                                por ello, pueden llegar a ser abusivos para los
-                                usuarios, incluso dejar en estado de
-                                vulnerabilidad a sus bienes.
-                            </p>
-                            <p>
-                                Entre otras cosas, contempla el no cobro cuando
-                                se consuma en plazas públicas, la consideración
-                                de un seguro total o parcial en caso de daños,
-                                así como garantizar condiciones mínimas y de
-                                seguridad en los espacios destinados a esta
-                                actividad.
-                            </p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
+       
         <section>
             <div class="max-w-screen-xl mx-auto px-1">
                 <div class="my-10 text-center">
