feat: informe legislativo

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -147,7 +147,7 @@ export interface Props {
                 </li>
                 <li>
                     <a class="aunderline whitespace-nowrap" href="/legislativo">
-                        Trabajo legislativo
+                        Informe legislativo 
                         <div class="underline"></div>
                     </a>
                 </li>
@@ -184,7 +184,7 @@ export interface Props {
                 </li>
                 <li>
                     <a class="aline whitespace-nowrap" href="/legislativo">
-                        Trabajo legislativo
+                        Informe legislativo 
                     </a>
                 </li>
                 <li>
@@ -224,7 +224,7 @@ export interface Props {
                         </li>
                         <li>
                             <a class="alineburger whitespace-nowrap" href="/legislativo">
-                                Trabajo legislativo
+                                Informe legislativo 
                             </a>
                         </li>
                         <li>
