--- a/src/pages/legislativo.astro
+++ b/src/pages/legislativo.astro
@@ -3,17 +3,17 @@ import Layout from "../layouts/Layout.astro";
 import imgOne from "../images/legislativo/img-1.jpeg";
 import imgTwo from "../images/legislativo/img-2.jpeg";
 import foto from "../images/foto-legislativo.jpg";
-import pimienta from "../images/prioritarias/pimienta.jpg";
-import agronomo from "../images/prioritarias/agronomo.jpg";
-import ambiente from "../images/prioritarias/ambiente.jpg";
-import baby from "../images/prioritarias/baby.jpg";
-import bici from "../images/prioritarias/bici.jpg";
-import viaje from "../images/prioritarias/viaje.jpg";
-import money from "../images/prioritarias/money.jpg";
-import empleo from "../images/prioritarias/empleo.jpg";
-import viejito from "../images/prioritarias/viejito.jpg";
-import constitucion from "../images/prioritarias/constitucion.jpg";
-import tiempo from "../images/prioritarias/tiempo.webp";
+import pimienta from "../images/pimienta.jpg";
+import agronomo from "../images/agronomo.jpg";
+import ambiente from "../images/ambiente.jpg";
+import baby from "../images/baby.jpg";
+import bici from "../images/bici.jpg";
+import viaje from "../images/viaje.jpg";
+import money from "../images/money.jpg";
+import empleo from "../images/empleo.jpg";
+import viejito from "../images/viejito.jpg";
+import constitucion from "../images/constitucion.jpg";
+import tiempo from "../images/tiempo.webp";
 ---
 
 <style>
