fix: correcciones finales

--- a/src/pages/legislativo.astro
+++ b/src/pages/legislativo.astro
@@ -191,9 +191,9 @@ import tiempo from "../images/tiempo.webp";
                     <div class="h-px w-full bg-gray-200 my-4"></div>
                     <p class="mt-2 text-sm text-gray-500">Turnado a:</p>
                     <ul class="mt-1 list-disc list-inside text-gray-700">
-                        <li>Procuración y Administración de Justicia</li>
-                        <li>Gobernación y Puntos Constitucionales</li>
-                        <li>Para la Igualdad de Género</li>
+                        <li>Procuración y Administración de Justicia.</li>
+                        <li>Gobernación y Puntos Constitucionales.</li>
+                        <li>Para la Igualdad de Género.</li>
                     </ul>
                 </div>
                 <!--2 -->
@@ -915,7 +915,7 @@ import tiempo from "../images/tiempo.webp";
                     <p class="mt-1 text-gray-600">
                         Iniciativa con Proyecto de Decreto por el que se reforma
                         el párrafo dieciseisavo y el párrafo vigesimoprimero del
-                        artículo 5 dela Constitución Política del Estado Libre y
+                        artículo 5 de la Constitución Política del Estado Libre y
                         Soberano de México, se reforma la fracción XXIX del
                         artículo 12, la fracción XI del artículo 17, las
                         fracciones XIV y XVI, XXI, XXXI y se agrega la fracción
@@ -927,6 +927,7 @@ import tiempo from "../images/tiempo.webp";
                     <div class="h-px w-full bg-gray-200 my-4"></div>
                     <p class="mt-2 text-sm text-gray-500">Turnado a:</p>
                     <ul class="mt-1 list-disc list-inside text-gray-700">
+                        <li>Gobernación y puntos constitucionales.</li>
                         <li>Educación, Cultura, Ciencia y Tecnología.</li>
                     </ul>
                 </div>
@@ -1113,7 +1114,7 @@ import tiempo from "../images/tiempo.webp";
                         </h3>
                         <p class="mt-1 text-gray-600">
                             Garantizar y proteger los derechos durante el
-                            embarazo, parto y puerperio, y los derechos de las
+                            embarazo, parto, puerperio y los derechos de las
                             infancias.
                         </p>
                         <div class="h-px w-full bg-gray-200 my-4"></div>
@@ -1138,9 +1139,9 @@ import tiempo from "../images/tiempo.webp";
                             Bici Estacionamientos.
                         </h3>
                         <p class="mt-1 text-gray-600">
-                            Para que sea considerada como una forma de ejercer
-                            violencia familiar y por tanto, sea perseguida y
-                            sancionada en sus términos.
+                            Red integral de estacionamientos para bicicletas
+                            que conectarán de manera obligatoria todos los
+                            edificios y estacionamientos públicos.
                         </p>
                         <div class="h-px w-full bg-gray-200 my-4"></div>
                     </div>
@@ -2199,7 +2200,7 @@ import tiempo from "../images/tiempo.webp";
                         Fecha: <span class="font-semibold">12 Mar. 2024</span>
                     </p>
                     <h3 class="text-xl font-semibold text-yellow-500">
-                        prevención de la violencia y la delincuencia juvenil.
+                        Prevención de la violencia y la delincuencia juvenil.
                     </h3>
                     <p class="mt-1 text-gray-600">
                         Iniciativa con Proyecto de Decreto por el que se reforma
@@ -2413,78 +2414,8 @@ import tiempo from "../images/tiempo.webp";
                         </li>
                     </ul>
                 </div>
-                <!--5 -->
-                <div
-                    class="p-4 border border-gray-300 rounded-lg bg-white shadow-sm"
-                >
-                    <div class="flex items-center">
-                        <p class="text-xs text-gray-400">
-                            Fecha: <span class="font-semibold"
-                                >22 Feb. 2022</span
-                            >
-                        </p>
-                        <div
-                            class="ml-2 border border-yellow-500 rounded inline-block px-2 py-px text-xs text-gray-500"
-                        >
-                            Aprobada
-                        </div>
-                    </div>
-                    <h3 class="text-xl font-semibold text-yellow-500"></h3>
-                    <p class="mt-1 text-gray-600">
-                        Punto de Acuerdo de urgente y obvia resolución por el
-                        que se exhorta respetuosamente a la Secretaría de
-                        Cultura y Turismo del Estado de México, para que en el
-                        ámbito de sus atribuciones reconocidas y conferidas por
-                        el artículo 38 de la Ley Orgánica de la Administración
-                        Pública del Estado de México, apoye a los artesanos
-                        mexiquenses con materia prima, equipamiento,
-                        comercialización, promoción y difusión de sus productos
-                        artesanales. Así como rinda un informe detallado a esta
-                        Soberanía Popular, sobre los logros alcanzados en
-                        materia de difusión artesanal durante la presente
-                        administración.
-                    </p>
-                    <div class="h-px w-full bg-gray-200 my-4"></div>
-                    <p class="mt-2 text-sm text-gray-500">Turnado a:</p>
-                    <ul class="mt-1 list-disc list-inside text-gray-700">
-                        <li>
-                            Se aprueba en lo general y en lo particular por
-                            mayoría de votos.
-                        </li>
-                    </ul>
-                </div>
-                <!--6 -->
-                <div
-                    class="p-4 border border-gray-300 rounded-lg bg-white shadow-sm"
-                >
-                    <div class="flex items-center">
-                        <p class="text-xs text-gray-400">
-                            Fecha: <span class="font-semibold"
-                                >24 Feb. 2022</span
-                            >
-                        </p>
-                    </div>
-                    <h3 class="text-xl font-semibold text-yellow-500"></h3>
-                    <p class="mt-1 text-gray-600">
-                        Punto de Acuerdo por el que se exhorta respetuosamente a
-                        la Secretaría de Seguridad del Estado de México, en el
-                        ámbito de su atribuciones y competencias, para que por
-                        medio del Centro de Control, Comando, Cómputo y
-                        Comunicaciones del Estado de México, adapte sus sistemas
-                        de vídeo vigilancia, arcos carreteros, botones de pánico
-                        y botones de enlace ciudadano y demás tecnología de
-                        seguridad con la que cuente, con rúters de internet, así
-                        como a la Secretaría de Desarrollo Urbano y Obra, en el
-                        ámbito de sus atribuciones y competencias, adaptar de
-                        igual forma, rúters de internet en espacios públicos,
-                        luminarias y postes de luz.
-                    </p>
-                    <div class="h-px w-full bg-gray-200 my-4"></div>
-                    <p class="mt-2 text-sm text-gray-500">Turnado a:</p>
-                    <ul class="mt-1 list-disc list-inside text-gray-700">
-                        <li>Seguridad Pública y Tránsito.</li>
-                    </ul>
-                </div>
+                
+                
                 <!--7 -->
                 <div
                     class="p-4 border border-gray-300 rounded-lg bg-white shadow-sm"
@@ -2746,7 +2677,7 @@ import tiempo from "../images/tiempo.webp";
                         Punto de Acuerdo de urgente y obvia resolución, por el
                         que la LXI Legislatura exhorta de manera respetuosa al
                         Sistema para el Desarrollo Integral de la Familia Estado
-                        de México, para generar una campaña deinformación,
+                        de México, para generar una campaña de información,
                         sensibilización y promoción de adopción de niños y niñas
                         mayores de 5 años y adolescentes.
                     </p>
