fix: feed social media

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -193,6 +193,8 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                 </div>
             </div>
         </section>
+        <div class="tagembed-widget max-w-screen-xl mx-auto" style="width:100%;height:100%;overflow:auto;" data-widget-id="308789" data-website="1"></div><script src="https://widget.tagembed.com/embed.min.js" type="text/javascript"></script>
+        <!-- propuestas 
         <ul
             class="juicer-feed max-w-screen-xl hidden lg:block"
             data-feed-id="omar-ortega-alvarez"
@@ -216,6 +218,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                 jQuery(".j-paginate").text("Ver más");
             }
         </script>
+        -->
         <section class="lg:my-20">
             <div class="max-w-screen-xl mx-auto">
                 <div>
