--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -193,7 +193,15 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                 </div>
             </div>
         </section>
-        <div class="tagembed-widget max-w-screen-xl mx-auto my-24" style="width:100%;height:100%;overflow:auto;" data-widget-id="308789" data-website="1"></div><script src="https://widget.tagembed.com/embed.min.js" type="text/javascript"></script>
+        <div
+            class="tagembed-widget max-w-screen-xl mx-auto my-24"
+            style="width:100%;height:100%;overflow:auto;"
+            data-widget-id="308789"
+            data-website="1"
+        >
+        </div><script
+            src="https://widget.tagembed.com/embed.min.js"
+            type="text/javascript"></script>
         <!-- propuestas 
         <ul
             class="juicer-feed max-w-screen-xl hidden lg:block"
@@ -675,9 +683,11 @@ const limitedPosts = allPosts.slice(0, maxPosts);
         </section>
     </main>
 
+    <!-- Juicer Embed 
     <script
         type="text/javascript"
         src="https://www.juicer.io/embed/omar-ortega-alvarez/embed-code.js"
         async
         defer></script>
+        -->
 </Layout>
