feat: new versions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -146,15 +146,11 @@ const limitedPosts = allPosts.slice(0, maxPosts);
 <Layout
     title="Omar Ortega"
     description="Conoce de cerca la labor de Omar Ortega en el Estado de México"
+    blogVariant={true}
 >
     <main>
         <section class="one">
-            <video class="" loop muted autoplay width="100%" height="100%">
-                <source
-                    src="https://pub-236b6a1111854253bfa86853c8c7d5ae.r2.dev/portada.mp4"
-                    type="video/mp4"
-                />
-            </video>
+            <img class="w-full h-[90vh] object-cover" src="https://cdn.omarortegamx.com.mx/portada-ooa-prd-web-2025.png" alt="">
         </section>
 
         <section>
@@ -177,17 +173,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                             Sobre mí
                         </h3>
                         <p>
-                            Orgullosamente mexicano, nací en Ciudad Guzmán,
-                            Jalisco, el 14 de septiembre de 1970. Soy Licenciado
-                            en Derecho por la Universidad Panamericana y tengo
-                            estudios de postgrado en Derecho Parlamentario por
-                            la Universidad Autónoma del Estado de México. He
-                            sido docente y, desde 1997, me he desempeñado en
-                            distintos puestos de la Administración Pública del
-                            Estado de México. Soy militante del PRD desde 1995.
-                            Fui Diputado Federal en dos ocasiones (2003-2006,
-                            2015-2018). Actualmente soy Diputado Local por el
-                            Distrito 38 de Coacalco y Tultitlán (2021-2024).
+                            Orgullosamente mexicano, nací en Ciudad Guzmán, Jalisco, el 14 de septiembre de 1970. Soy Licenciado en Derecho por la Universidad Panamericana y tengo estudios de postgrado en Derecho Parlamentario por la Universidad Autónoma del Estado de México. He sido docente y, desde 1997, me he desempeñado en distintos puestos de la Administración Pública del Estado de México. Soy militante del PRD desde 1995 y soy militante fundador del PRD Estado de México Fui Diputado Federal en dos ocasiones (2003-2006, 2015-2018) así como Diputado Local por el Distrito 38 de Coacalco y Tultitlán (2021-2024). Actualmente soy Diputado Local en la LXII Legislatua del Estado de México.
                         </p>
                     </div>
                 </div>
